# ogtool-scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: book_parser.py  knowledgebase_payload.py  scraper.py
